--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "serve": "vite preview",
+    "serve": "serve -s build -l $PORT",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
