Fix TypeScript configuration for Heroku deployment

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020"],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "outDir": "./dist",
     "strict": true,
     "resolveJsonModule": true
