--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "serve": "node dist/server.js",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
@@ -32,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass": "^1.77.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "@types/express": "^4.17.13"
   }
 }
