--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "node16",
+    "module": "NodeNext",
     "lib": ["ES2020"],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "node16",
+    "moduleResolution": "NodeNext",
     "outDir": "./dist",
     "strict": true,
     "resolveJsonModule": true
